--- a/src/Makefile
+++ b/src/Makefile
@@ -29,7 +29,7 @@ CC = gcc
 C_FLAG = -g -O0 -fPIC -shared 
 LINK_FLAG = -ldl 
 
-#D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB -DDUMP_CONTEXT -DDUMP_DIRTY_CALL
+#D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB -DDUMP_CONTEXT -DDUMP_DIRTY_CALL -DDEBUG_REACH
 #D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB
 #D_FLAG = -DDUMP_BB
 D_FLAG = 
