--- a/core/Makefile
+++ b/core/Makefile
@@ -19,11 +19,11 @@
 OBJ = entre.o top_level.o global.o binary.o basicblock.o \
 	  codecache.o function.o stack.o got.o context_switch.o \
 	  isa.o in_code.o make_new_function.o control_trans.o redirect.o \
-	  trace.o OOprofile.o bb_freq.o utils.o
+	  trace.o OOprofile.o bb_freq.o utils.o options.o
 SOURCE = entre.c top_level.c global.c binary.c basicblock.c \
 	 codecache.c function.c stack.c got.c context_switch.c \
 	 isa.c in_code.c make_new_function.c control_trans.c redirect.c \
-	 trace.c OOprofile.c bb_freq.c utils.c
+	 trace.c OOprofile.c bb_freq.c utils.c options.c
 
 CC = gcc
 C_FLAG = -g -O0 -fPIC -shared 
@@ -67,6 +67,7 @@ ALL:
 	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} OOprofile.c            -c -o  ${OBJDIR}OOprofile.o;				\
 	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} bb_freq.c              -c -o  ${OBJDIR}bb_freq.o;				\
 	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} utils.c        	      -c -o  ${OBJDIR}utils.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} options.c       	      -c -o  ${OBJDIR}options.o;			\
 															\
 	cd ${OBJDIR};											\
 	${CC} ${C_FLAG} ${LINK_FLAG}  -o sentre_multiThread.so $(OBJ);		\
