m1.0.7 (1)globals changes with global.h and globals_shared.h (2)Makefile changes with .SEntre fold

--- a/core/Makefile
+++ b/core/Makefile
@@ -15,6 +15,7 @@
 # this list of conditions and the following disclaimer in the documentation
 # and/or other materials provided with the distribution.
 
+SHELL := /bin/bash
 
 OBJ = entre.o top_level.o global.o binary.o basicblock.o \
 	  codecache.o function.o stack.o got.o context_switch.o \
@@ -38,39 +39,78 @@ D_FLAG =
 #TOOL_FLAG = -DOOprofile
 #TOOL_FLAG = -DBB_FREQ -DDEBUG
 #TOOL_FLAG = -DBB_FREQ
-TOOL_FLAG = 
+TOOL_FLAG =
+ 
+BUILD_HOME = ~/.SEntre/
+INSTALL_HOME = ~/.SEntre/
+SRCDIR = ${BUILD_HOME}src/
+OBJDIR = ${BUILD_HOME}obj/
+LIBDIR = ${INSTALL_HOME}lib/
 
-OBJDIR = ../.lib/
-LIBDIR = ../.lib/
 
 #$(OBJ) : $(SOURCE)
 #	$(CC) ${C_FLAG}  $(SOURCE) -c
 
 ALL:
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} entre.c                -c -o  ${OBJDIR}entre.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} top_level.c            -c -o  ${OBJDIR}top_level.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} global.c               -c -o  ${OBJDIR}global.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} binary.c               -c -o  ${OBJDIR}binary.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} basicblock.c           -c -o  ${OBJDIR}basicblock.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} codecache.c            -c -o  ${OBJDIR}codecache.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} function.c             -c -o  ${OBJDIR}function.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} stack.c                -c -o  ${OBJDIR}stack.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} got.c                  -c -o  ${OBJDIR}got.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} context_switch.c       -c -o  ${OBJDIR}context_switch.o;			\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} isa.c                  -c -o  ${OBJDIR}isa.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} in_code.c              -c -o  ${OBJDIR}in_code.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} make_new_function.c    -c -o  ${OBJDIR}make_new_function.o;		\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} control_trans.c        -c -o  ${OBJDIR}control_trans.o;			\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} context_switch.c       -c -o  ${OBJDIR}context_switch.o;			\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} redirect.c             -c -o  ${OBJDIR}redirect.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} trace.c                -c -o  ${OBJDIR}trace.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} OOprofile.c            -c -o  ${OBJDIR}OOprofile.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} bb_freq.c              -c -o  ${OBJDIR}bb_freq.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} utils.c        	      -c -o  ${OBJDIR}utils.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} options.c       	      -c -o  ${OBJDIR}options.o;			\
+	rm -f ${SRCDIR}*
+	if test -d $(BUILD_HOME); then			\
+		echo "BUILD HOME:$(BUILD_HOME) exits!";		\
+	else						\
+		mkdir $(BUILD_HOME);			\
+	fi;							
+							\
+	if test -d $(INSTALL_HOME); then		\
+		echo "INSTALL HOME:$(INSTALL_HOME) exits!";	\
+	else						\
+		mkdir $(INSTALL_HOME);			\
+	fi;							
+							\
+	if test -d $(SRCDIR); then			\
+		echo "BUILD SRC:$(SRCDIR) exits!";		\
+	else						\
+		mkdir $(SRCDIR);			\
+	fi;							
+							\
+	if test -d $(OBJDIR); then			\
+		echo "BUILD OBJ:$(OBJSRCDIR) exits!";		\
+	else						\
+		mkdir $(OBJDIR);			\
+	fi;							
+							\
+	if test -d $(LIBDIR); then			\
+		echo "INSTALL LIB:$(LIBDIR) exits!";		\
+	else						\
+		mkdir $(LIBDIR);			\
+	fi;							
+							\
+	cp	*.h	${SRCDIR};			\
+	cp	*.c	${SRCDIR};			\
+	cp	lib/*	${SRCDIR};			\
+							\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}entre.c                -c -o  ${OBJDIR}entre.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}top_level.c            -c -o  ${OBJDIR}top_level.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}global.c               -c -o  ${OBJDIR}global.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}binary.c               -c -o  ${OBJDIR}binary.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}basicblock.c           -c -o  ${OBJDIR}basicblock.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}codecache.c            -c -o  ${OBJDIR}codecache.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}function.c             -c -o  ${OBJDIR}function.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}stack.c                -c -o  ${OBJDIR}stack.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}got.c                  -c -o  ${OBJDIR}got.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}context_switch.c       -c -o  ${OBJDIR}context_switch.o;			\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}isa.c                  -c -o  ${OBJDIR}isa.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}in_code.c              -c -o  ${OBJDIR}in_code.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}make_new_function.c    -c -o  ${OBJDIR}make_new_function.o;		\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}control_trans.c        -c -o  ${OBJDIR}control_trans.o;			\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}context_switch.c       -c -o  ${OBJDIR}context_switch.o;			\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}redirect.c             -c -o  ${OBJDIR}redirect.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}trace.c                -c -o  ${OBJDIR}trace.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}OOprofile.c            -c -o  ${OBJDIR}OOprofile.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}bb_freq.c              -c -o  ${OBJDIR}bb_freq.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}utils.c	               -c -o  ${OBJDIR}utils.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}options.c              -c -o  ${OBJDIR}options.o;			\
 															\
 	cd ${OBJDIR};											\
-	${CC} ${C_FLAG} ${LINK_FLAG}  -o sentre_multiThread.so $(OBJ);		\
+	${CC} ${C_FLAG} ${LINK_FLAG}  -o ${INSTALL_HOME}sentre_multiThread.so $(OBJ);		\
 	cd -;													
 
 	
