--- a/core/Makefile
+++ b/core/Makefile
@@ -87,6 +87,7 @@ ALL:
 	cp	*.c	${SRCDIR};			\
 	cp	lib/*	${SRCDIR};			\
 	cp	linux/*	${SRCDIR};			\
+	cp	mips/*	${SRCDIR};			\
 							\
 	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}entre.c                -c -o  ${OBJDIR}entre.o;					\
 	$(CC) ${C_FLAG} ${D_FLAG} ${TOOL_FLAG} ${SRCDIR}top_level.c            -c -o  ${OBJDIR}top_level.o;				\
