add map functions between the origin address space with the codecache addresss space

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,7 +32,8 @@ LINK_FLAG = -ldl
 #D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB -DDUMP_CONTEXT -DDUMP_DIRTY_CALL -DDEBUG_REACH
 #D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB
 #D_FLAG = -DDUMP_BB
-D_FLAG = 
+#D_FLAG =  -DDUMP_DIRTY_CALL
+D_FLAG =  
 
 #TOOL_FLAG = -DTRACE
 #TOOL_FLAG = -DOOprofile
