--- a/src/Makefile
+++ b/src/Makefile
@@ -30,10 +30,14 @@ C_FLAG = -g -O0 -fPIC -shared
 LINK_FLAG = -ldl 
 
 #D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB -DDUMP_CONTEXT -DDUMP_DIRTY_CALL -DDEBUG_REACH
-#D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB
+#D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB -DDEBUG_REACH
+#D_FLAG = -DDEBUG -DDUMP_BB -DDEBUG_REACH
 #D_FLAG = -DDUMP_BB
-#D_FLAG =  -DDUMP_DIRTY_CALL
-D_FLAG =  
+#D_FLAG = -DDUMP_DIRTY_CALL
+#D_FLAG = -DDEBUG_REACH -DDEBUG 
+#D_FLAG = -DDEBUG
+D_FLAG = 
+
 
 #TOOL_FLAG = -DTRACE
 #TOOL_FLAG = -DOOprofile
