--- a/core/Makefile
+++ b/core/Makefile
@@ -40,8 +40,8 @@ D_FLAG =
 ##### for chrome don't define -DMAP
 ##### -DINSN_IN_DATE used for gdb, for large app, eg. GCC, don't define -DINSN_IN_DATE
 #F_FLAG = -DMAP -DINSN_IN_DATE
-#F_FLAG = -DMAP 
-F_FLAG = 
+F_FLAG = -DMAP 
+#F_FLAG = 
 
 #####Tool Flags
 #TOOL_FLAG = -DTRACE
