--- a/core/Makefile
+++ b/core/Makefile
@@ -47,8 +47,8 @@ F_FLAG = -DMAP
 #TOOL_FLAG = -DTRACE
 #TOOL_FLAG = -DOOprofile
 #TOOL_FLAG = -DBB_FREQ -DDEBUG
-TOOL_FLAG = -DBB_FREQ
-#TOOL_FLAG =
+#TOOL_FLAG = -DBB_FREQ
+TOOL_FLAG =
  
 BUILD_HOME = ~/.SEntre/
 INSTALL_HOME = ~/.SEntre/
