Optimize API_MODE and BB_FREQ, TRACE pass.

--- a/core/Makefile
+++ b/core/Makefile
@@ -20,11 +20,11 @@ SHELL := /bin/bash
 OBJ = entre.o top_level.o global.o binary.o basicblock.o \
 	  codecache.o function.o stack.o got.o context_switch.o \
 	  isa.o in_code.o make_new_function.o control_trans.o redirect.o \
-	  trace.o OOprofile.o bb_freq.o utils.o options.o os.o share_app.o
+	  utils.o options.o os.o share_app.o
 SOURCE = entre.c top_level.c global.c binary.c basicblock.c \
 	 codecache.c function.c stack.c got.c context_switch.c \
 	 isa.c in_code.c make_new_function.c control_trans.c redirect.c \
-	 trace.c OOprofile.c bb_freq.c utils.c options.c os.c share_app.c
+	 utils.c options.c os.c share_app.c
 
 CC = gcc-4.4
 C_FLAG = -g -O0 -fPIC -shared 
@@ -34,7 +34,7 @@ LINK_FLAG = -ldl
 #D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB -DDUMP_CONTEXT -DDUMP_DIRTY_CALL -DDEBUG_REACH
 #D_FLAG = -DDEBUG -DDUMP_FUNC -DDUMP_BB
 #D_FLAG = -DDEBUG -DDUMP_DIRTY_CALL -DDUMP_FUNC
-D_FLAG = 
+D_FLAG =
 
 ##### Function Flags 
 ##### for chrome don't define -DMAP
@@ -43,13 +43,6 @@ D_FLAG =
 #F_FLAG = -DMAP -DINSN_IN_DATE
 F_FLAG = -DMAP 
 #F_FLAG = 
-
-#####Tool Flags
-TOOL_FLAG = -DTRACE
-#TOOL_FLAG = -DOOprofile
-#TOOL_FLAG = -DBB_FREQ -DDEBUG
-#TOOL_FLAG = -DBB_FREQ
-#TOOL_FLAG =
  
 BUILD_HOME = ~/.SEntre/
 INSTALL_HOME = ~/.SEntre/
@@ -115,9 +108,6 @@ ALL:
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}control_trans.c        -c -o  ${OBJDIR}control_trans.o;			\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}context_switch.c       -c -o  ${OBJDIR}context_switch.o;			\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}redirect.c             -c -o  ${OBJDIR}redirect.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}trace.c                -c -o  ${OBJDIR}trace.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}OOprofile.c            -c -o  ${OBJDIR}OOprofile.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}bb_freq.c              -c -o  ${OBJDIR}bb_freq.o;				\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}utils.c                -c -o  ${OBJDIR}utils.o;				\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}options.c              -c -o  ${OBJDIR}options.o;			\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}os.c                   -c -o  ${OBJDIR}os.o;			\
