--- a/api/samples/Makefile
+++ b/api/samples/Makefile
@@ -20,11 +20,11 @@ SHELL := /bin/bash
 OBJ = entre.o top_level.o global.o binary.o basicblock.o \
 	  codecache.o function.o stack.o got.o context_switch.o \
 	  isa.o in_code.o make_new_function.o control_trans.o redirect.o \
-	  trace.o OOprofile.o bb_freq.o utils.o options.o os.o share_app.o bbcount.o
+	  trace.o OOprofile.o bb_freq.o utils.o options.o os.o share_app.o
 SOURCE = entre.c top_level.c global.c binary.c basicblock.c \
 	 codecache.c function.c stack.c got.c context_switch.c \
 	 isa.c in_code.c make_new_function.c control_trans.c redirect.c \
-	 trace.c OOprofile.c bb_freq.c utils.c options.c os.c share_app.c bbcount.c
+	 trace.c OOprofile.c bb_freq.c utils.c options.c os.c share_app.c
 
 CC = gcc
 C_FLAG = -g -O0 -fPIC -shared 
@@ -40,14 +40,14 @@ D_FLAG =
 ##### for chrome don't define -DMAP
 ##### -DINSN_IN_DATE used for gdb, for large app, eg. GCC, don't define -DINSN_IN_DATE
 #F_FLAG = -DMAP -DINSN_IN_DATE
-F_FLAG = -DMAP -DAPI_MODE -DAPI_ANALYSIS
+F_FLAG = -DMAP -DAPI_MODE
 #F_FLAG = 
 
 #####Tool Flags
-#TOOL_FLAG = -DTRACE
+TOOL_FLAG = -DTRACE
 #TOOL_FLAG = -DOOprofile
 #TOOL_FLAG = -DBB_FREQ -DDEBUG
-TOOL_FLAG = -DBB_FREQ
+#TOOL_FLAG = -DBB_FREQ
 #TOOL_FLAG =
  
 BUILD_HOME = ~/.SEntre/
@@ -93,12 +93,12 @@ ALL:
 	fi;							
 							\
 	cp	../../core/*.h	${SRCDIR};			\
+	cp	../include/*.h	${SRCDIR};			\
+	cp	*.c	${SRCDIR};			\
 	cp	../../core/*.c	${SRCDIR};			\
 	cp	../../core/lib/*	${SRCDIR};			\
 	cp	../../core/linux/*	${SRCDIR};			\
 	cp	../../core/mips/*	${SRCDIR};			\
-	cp	../include/*.h	${SRCDIR};			\
-	cp	*.c	${SRCDIR};			\
 							\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}entre.c                -c -o  ${OBJDIR}entre.o;					\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}top_level.c            -c -o  ${OBJDIR}top_level.o;				\
@@ -117,13 +117,12 @@ ALL:
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}context_switch.c       -c -o  ${OBJDIR}context_switch.o;			\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}redirect.c             -c -o  ${OBJDIR}redirect.o;				\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}trace.c                -c -o  ${OBJDIR}trace.o;					\
-	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}OOprofile.c            -c -o  ${OBJDIR}OOprofile.o;				\
-	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}bb_freq.c              -c -o  ${OBJDIR}bb_freq.o;				\
+	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}OOprofile.c            -c -o  ${OBJDIR}OOprofile.o;					\
+	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}bb_freq.c              -c -o  ${OBJDIR}bb_freq.o;					\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}utils.c                -c -o  ${OBJDIR}utils.o;				\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}options.c              -c -o  ${OBJDIR}options.o;			\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}os.c                   -c -o  ${OBJDIR}os.o;			\
 	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}share_app.c            -c -o  ${OBJDIR}share_app.o;			\
-	$(CC) ${C_FLAG} ${D_FLAG} ${F_FLAG} ${TOOL_FLAG} ${SRCDIR}bbcount.c            	 -c -o  ${OBJDIR}bbcount.o;			\
 															\
 	cd ${OBJDIR};											\
 	${CC} ${C_FLAG} ${LINK_FLAG}  -o ${INSTALL_HOME}sentre.so $(OBJ);		\
