Add the output of heap for trace

--- a/api/samples/Makefile
+++ b/api/samples/Makefile
@@ -43,8 +43,10 @@ D_FLAG =
 ##### for chrome don't define -DMAP
 ##### -DINSN_IN_DATE used for gdb, for large app, eg. GCC, don't define -DINSN_IN_DATE
 #F_FLAG = -DMAP -DINSN_IN_DATE
-#FFLAG = -DMAP -DAPI_MODE -DOUT_SVG
-FFLAG = -DMAP -DAPI_MODE -DOUT_SVG -DOUT_TRACE_STACK
+#FFLAG = -DMAP -DAPI_MODE
+FFLAG = -DMAP -DAPI_MODE -DOUT_SVG
+#FFLAG = -DMAP -DAPI_MODE -DOUT_SVG -DOUT_TRACE_STACK
+#FFLAG = -DMAP -DAPI_MODE -DOUT_SVG -DOUT_TRACE_HEAP
 ifeq ($(MABI),64)
     F_FLAG = ${FFLAG} -DN64
 endif
